# RUSLE

./: .dockerignore  .env.example  .gee_config.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  project diagram.mmd  pyproject.toml  run.py
.github/: copilot-instructions.md
.github/workflows/: docs.yml
00_scripts/: GEE_AUTH_SETUP.md  RUSLE.ipynb  gee_auth.py  rusle_utils.py
01_references/: notes.md
02_input/Regiones/: Regional.shp.xml
02_input/region_metropolitana_comunas/: Comuna_Regi%C3%B3n_Metropolitana.dbf  Comuna_Regi%C3%B3n_Metropolitana.shp  Comuna_Regi%C3%B3n_Metropolitana.shx  Comuna_Regi%C3%B3n_Metropolitana.xml
app/: __init__.py  config.py  main.py
app/routers/: __init__.py  process.py  upload.py  visualize.py
app/services/: __init__.py  gee_service.py  rusle_calculator.py  shapefile_handler.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: index.html
docs/: index.md
docs/getting-started/: gee-setup.md  installation.md  quickstart.md
docs/reference/: api.md  configuration.md  rusle-model.md
docs/stylesheets/: theme.css
docs/user-guide/: docker.md  notebook.md  web-app.md
site/: 404.html  index.html  sitemap.xml
site/getting-started/gee-setup/: index.html
site/getting-started/installation/: index.html
site/getting-started/quickstart/: index.html
site/reference/api/: index.html
site/reference/configuration/: index.html
site/reference/rusle-model/: index.html
site/search/: search_index.json
site/stylesheets/: theme.css
site/user-guide/docker/: index.html
(+2 files in other folders)
